# VisionAi

./: CODE_OF_CONDUCT.md  README.md  build.gradle  build.gradle.kts  gradle.properties  ktlint.gradle  secrets.gradle  settings.gradle  settings.gradle.kts  versions.gradle
visionai/: .gitignore  CMakeLists.txt  build.gradle
visionai/src/androidTest/java/com/bendenen/visionai/: ExampleInstrumentedTest.kt
visionai/src/main/: AndroidManifest.xml
visionai/src/main/cpp/: image_utils.cpp
visionai/src/main/cpp/utils/: coordinate.hpp  image_platform_converter.hpp  image_utils.cpp  image_utils.hpp
visionai/src/main/java/com/bendenen/visionai/ml/: Classifier.kt
visionai/src/main/java/com/bendenen/visionai/ml/objectdetection/: ObjectDetector.kt
visionai/src/main/java/com/bendenen/visionai/ml/tflite/: ImageClassifier.kt  TFLiteObjectDetection.kt  TFLiteObjectDetectionAPIModel.kt
visionai/src/main/java/com/bendenen/visionai/utils/: ImageUtils.kt  NativeImageUtilsWrapper.kt
visionai/src/main/java/com/bendenen/visionai/utils/tracking/: MultiBoxTracker.kt  ObjectTracker.java
visionai/src/main/java/com/bendenen/visionai/videoprocessor/: VideoProcessor.kt  VideoProcessorListener.kt
visionai/src/main/java/com/bendenen/visionai/videoprocessor/tflite/: TfLiteVideoProcessorImpl.kt
visionai/src/main/java/com/bendenen/visionai/videosource/: VideoSourceListener.kt
visionai/src/main/java/com/bendenen/visionai/videosource/camera2/: Camera2VideoSourceImpl.kt
visionai/src/main/java/com/bendenen/visionai/videosource/mediacodec/: MediaCodecHandler.kt  MediaCodecVideoSourceImpl.kt  MediaCodecWrapper.java
visionai/src/main/res/values/: strings.xml
visionai/src/test/java/com/bendenen/visionai/: ExampleUnitTest.kt
(+247 files in other folders)
